<resources>
    <string name="app_name" translatable="false">My BMI</string>
    <string name="copyright" translatable="false">©2018 &#8211; 2019 GuepardoApps (Jonas Schubert)</string>

    <string name="about">About</string>
    <string name="author_title">Author</string>
    <string name="author" translatable="false">Jonas Schubert\nGuepardoApps</string>
    <string name="version_title">Version</string>
    <string name="version" translatable="false">2.0.4.190810</string>
    <string name="email_title">Mail</string>
    <string name="email" translatable="false">guepardoapps@gmail.com</string>
    <string name="gitHubLink_title" translatable="false">GitHub</string>
    <string name="gitHubLink" translatable="false">https://github.com/GuepardoApps-Releases/BMICalculator/</string>
    <string name="homepageLink_title" translatable="false">Homepage</string>
    <string name="homepageLink" translatable="false">https://guepardoapps.github.io/</string>
    <string name="special_thanks_title" translatable="false">Special thanks</string>
    <string name="special_thanks" translatable="false">I want to thank my lovely wife for always supporting me and helping me to improve this application! நான் உன்னை காதலிக்கிறேன்</string>

    <string name="contentDescription">This is an image</string>

    <string name="enterWeight">Enter your weight in kg</string>
    <string name="enterHeight">Enter your height in cm</string>

    <string name="calculate">Calculate</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="example">Example</string>
    <string name="delete">Delete</string>
    <string name="deleteRequest">Do you want to delete the entry %s?</string>

    <string name="clearingDatabaseTitle">Clearing Database</string>
    <string name="clearingDatabasePrompt">Do you really want to delete all entries?</string>

    <string name="snapshotFileName">BMI graph</string>
    <string name="snapshotTitle">My BMI graph</string>
    <string name="snapshotFailed">Could not take snapshot!</string>

    <string name="bmiMailTextPrefix">My last BMI:</string>

    <string name="calculateBmiMissingFieldsHint">Please provide all needed fields!</string>
    <string name="calculateBmiInvalidNumberHint">Please provide valid numbers!</string>
    <string name="calculateBmiInvalidWeightHint">Please enter a valid weight!</string>
    <string name="calculateBmiInvalidHeightHint">Please enter a valid height!</string>

    <string name="mediaStorageExceptionMessage">"Could not get path from MediaStore. Please check permissions."</string>
</resources>
