<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkPrimary">

    <TextView
        android:id="@+id/title_imprint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/about"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/TextIcon"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bar"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/title_imprint"
        android:layout_margin="5dp"
        android:background="@color/TextIcon" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bar"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerInside"
            android:src="@drawable/main_image_informations" />

        <TextView
            android:id="@+id/imprintAuthor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/author"
            android:textColor="@color/TextIcon" />

        <TextView
            android:id="@+id/imprintEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@xml/button_blank_white"
            android:clickable="true"
            android:gravity="center"
            android:onClick="SendMail"
            android:padding="10dp"
            android:text="@string/email"
            android:textColor="@color/TextIcon" />

        <TextView
            android:id="@+id/imprintGitHub"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@xml/button_blank_white"
            android:clickable="true"
            android:gravity="center"
            android:onClick="GoToGitHub"
            android:padding="10dp"
            android:text="@string/gitHubLink"
            android:textColor="@color/TextIcon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@xml/button_blank_white"
            android:clickable="true"
            android:contentDescription="@string/contentDescription"
            android:onClick="PayPal"
            android:padding="10dp"
            android:src="@drawable/paypal" />
    </LinearLayout>

</RelativeLayout>