<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/TextIcon">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relativeLayoutButtonBar"
        android:layout_margin="10dp"
        android:background="@color/Primary"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:labelFor="@+id/inputFieldWeight"
            android:text="@string/enterWeight"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/TextIcon"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputFieldWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="@color/TextIcon">

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:labelFor="@+id/inputFieldHeight"
            android:text="@string/enterHeight"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/TextIcon"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputFieldHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="@color/TextIcon" />

        <Button
            android:id="@+id/buttonCalculate"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@xml/button_blank_white"
            android:padding="5dp"
            android:text="@string/calculate"
            android:textColor="@color/TextIcon"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bmiResult"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/TextIcon"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bmiResultDescription"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/TextIcon"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageButton
                    android:id="@+id/imageButtonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@xml/button_blank_white"
                    android:contentDescription="@string/contentDescription"
                    android:src="@android:drawable/ic_menu_save" />

                <ImageButton
                    android:id="@+id/imageButtonShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@xml/button_blank_white"
                    android:contentDescription="@string/contentDescription"
                    android:src="@android:drawable/ic_menu_share" />

                <ImageButton
                    android:id="@+id/imageButtonGraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@xml/button_blank_white"
                    android:contentDescription="@string/contentDescription"
                    android:src="@android:drawable/ic_menu_view" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/Primary"
        android:padding="2dp">

        <Button
            android:id="@+id/buttonVersionInformation"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="3dp"
            android:background="@xml/button_blank_white"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/versionExample"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/TextIcon" />
    </RelativeLayout>

</RelativeLayout>