<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    android:padding="10dp">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:labelFor="@+id/inputFieldWeight"
                android:text="@string/enterWeight"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/PrimaryText"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputFieldWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@color/PrimaryText">

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:labelFor="@+id/inputFieldHeight"
                android:text="@string/enterHeight"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/PrimaryText"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputFieldHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@color/PrimaryText" />

            <com.rey.material.widget.Button
                android:id="@+id/buttonCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/calculate"
                android:textColor="@color/PrimaryText"
                android:textStyle="bold"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorPrimary"
                app:rd_rippleType="touch" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/bmiResult"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/PrimaryText"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bmiResultDescription"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/SecondaryText"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>